@@ -56,6 +56,7 @@
     + Fix logical circuits add/delete errors (#2381);
     + API:
         + Fix inconsistent API success value returned (#2045);
+        + Fix filter_by functionality (#2392);
 
     Security Fixes:
     ----------------------------
